     - If the he X-Spam-Score header is present, but has no value 
	email2trac will crash, closes #63

     - Added config option which header field we must check 
       for determing if mail is Spam, eg:
        - spam_header : X-Spam-Level (default: X-Spam-Score)
 
    Author: email2trac at bulk dot squeakyblue dot com
    Applied by: Bas van der Vlies

    

2008-02-04
	* Added version check and exit if we do not support the trac version
	  closes bug #23
	  Reported By: Marc Zahnlecker m.zahnlecker at lxbyte dot de

	  Fixed By: Bas van der Vlies

	* Added check if syslog module is available. If it is not available
          disable the syslog functionality.
	  Author: michael.th add gmx dot net 

	  Implemented by: Bas van der Vlies

	* Added strip_quotes function, default settings:
		strip_quotes: <int> (default: 0) 
		mail_quote: <quote chars> (default: "> ")
	  Author: nicolasm @ opera dot com

	  Implemented by: Bas van der Vlies

	* Added patch to make notify email work with trac 0.11 dev.
	  Author: tbaschak add ktc dot mb dot ca	
	  Author: andrei2102 add gmail dot com 

	  Implemented by: Bas van der Vlies

	* greedy matching in Subject line, We must stop after the first ':'
	  else we get wrong values for ticket fields when we update a ticket
	  via mail, closes ticket #37
	  Reported by: dmaziuk at bmrb dot wisc dot edu
	  Fixed    by: Bas van der Vlies

	* added IGNORECASE flag to regular expression for black list. This
	  is a quick fix, still want to implement this as configuration 
	  option, closed bug #39

	  Reported By: jodok at lovelysystems dot com
	  Fixed by   : Bas van der Vlies

	* When a known user mails a ticket. We will set the Reporter to
	  its login name, closes bug #33, #41

	  Also add configuration option: 
	  	ignore_trac_user_settings : 0 (default value)

	  This option will skip the email address to trac user login name
	  mapping.

	  Reported by: anonymous
	  Fixed by   : Bas van der Vlies

	